--- a/vcard-personal-portfolio-master/assets/css/style.css
+++ b/vcard-personal-portfolio-master/assets/css/style.css
@@ -1866,7 +1866,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { flex-direction: column; }
 
-  .avatar-box img { width: 150px; }
+  .avatar-box img { width: 150px; border-radius: 15%; border: 3px solid #ccc; }
 
   .info-content .name {
     white-space: nowrap;
